--- a/urbantekk.css
+++ b/urbantekk.css
@@ -503,4 +503,12 @@ section.visible {
   80% { transform: translate(2px, 0px) skew(1deg); }
   100% { transform: translate(0); }
 }
+@keyframes glitchRGB {
+  0%   { filter: invert(1) drop-shadow(0 0 2px red); transform: translate(0, 0); }
+  25%  { filter: invert(1) drop-shadow(0 0 3px lime); transform: translate(-1px, 1px); }
+  50%  { filter: invert(1) drop-shadow(0 0 3px cyan); transform: translate(1px, -1px); }
+  75%  { filter: invert(1) drop-shadow(0 0 4px magenta); transform: translate(-2px, 2px); }
+  100% { filter: invert(1) drop-shadow(0 0 2px blue); transform: translate(0, 0); }
+}
+
 
